@@ -1,4 +1,4 @@
-3.12.0+dev23 (2010-05-12)
+3.12.0+dev24 (2010-05-17)
 
 # The version string is the first line of this file.
 # It must be in the format described in stdlib/sys.mli
