@@ -15,8 +15,8 @@
 
 (* Dynamic loading of .cmo files *)
 
-open Dynlinkaux
-open Dynlinkaux.Cmo_format
+open Dynlinkaux  (* REMOVE_ME for ../../debugger/dynlink.ml *)
+open Cmo_format
 
 type linking_error =
     Undefined_global of string
